--- a/script-element.html
+++ b/script-element.html
@@ -1,5 +1,5 @@
 <link rel="import" href="../polymer/polymer.html">
-
+<link rel="import" href="hello-world.html">
 <!--
 `script-element`
 repro for bundling issue
